# simple-training-algos

./: .gitignore  README.md  main.py  pyproject.toml
grpo_atari/: __init__.py  config.py  demo.py  environment.py  grpo_loss.py  model.py  trainer.py  trajectory.py  utils.py
grpo_atari/cli/: __init__.py  demo.py  eval.py  test.py  train.py
tests/: __init__.py  conftest.py
tests/test_config/: __init__.py  test_config.py
tests/test_environment/: __init__.py  test_environment.py
tests/test_grpo_loss/: __init__.py  test_grpo_loss.py
tests/test_integration/: __init__.py  test_integration.py
tests/test_model/: __init__.py  test_model.py
tests/test_trainer/: __init__.py  test_trainer.py
tests/test_trajectory/: __init__.py  test_trajectory.py
